--- a/contigviz_pipeline/config.yml
+++ b/contigviz_pipeline/config.yml
@@ -10,6 +10,7 @@ collapse_kmers: collapsed
 user_group: team301-grp
 fastk_path: /software/team301/user/cw21/fastk/
 hexamer_path: /software/team301/user/cw21/hexamer/hexsum
+un_count_path: /software/team301/user/cw21/unique_kmers/target/release/unique-kmers
 tetra_count_path: /software/team301/user/cw21/kmer_counter/target/release/kmer-counter
 hextable_path: /software/team301/user/cw21/hexamer/cds.worm.hex
 conda_tf: /software/team301/user/cw21/conda/kmerviz
