--- a/readviz_pipeline/config.yml
+++ b/readviz_pipeline/config.yml
@@ -2,14 +2,16 @@ sample_id: ilAllOxya1
 species_name: Allophyes_oxyacanthae
 read_file: cat_leps/ilAllOxya1.cat.fasta.gz
 
+fastk_tab: kmer/k31/ilAllOxya1.k31.ktab
+
 user_group: team301-grp
 tetra_count_path: /software/team301/user/cw21/kmer_counter/target/release/kmer-counter
 fastk_path: /software/team301/user/cw21/fastk/
 un_count_path: /software/team301/user/cw21/unique_kmers/target/release/unique-kmers
 hexamer_path: /software/team301/user/cw21/hexamer/hexsum
-vae_path: /lustre/scratch116/tol/projects/darwin/sub_projects/cobiont_detection/notebooks/kmerviz_pipeline/scripts/VAE/vae.py
-draw_vae_path: /lustre/scratch116/tol/projects/darwin/sub_projects/cobiont_detection/notebooks/kmerviz_pipeline/scripts/VAE/vae_draw.py
-cat_labeller_path: /lustre/scratch116/tol/projects/darwin/sub_projects/cobiont_detection/notebooks/kmerviz_pipeline/scripts/VAE/category_labels_from_cont.py
+vae_path: /software/team301/user/cw21/VAE/vae.py
+draw_vae_path: /software/team301/user/cw21/VAE/vae_draw.py
+cat_labeller_path: /software/team301/user/cw21/VAE/category_labels_from_cont.py
 
 hextable_path: /software/team301/user/cw21/hexamer/cds.worm.hex
 conda_tf: /software/team301/user/cw21/conda/kmerviz
