--- a/env_kmerviz.yaml
+++ b/env_kmerviz.yaml
@@ -9,25 +9,26 @@ dependencies:
   - _tflow_select=2.3.0=eigen
   - absl-py=0.12.0=pyhd8ed1ab_0
   - aiohttp=3.7.4=py38h497a2fe_0
-  - anyio=2.2.0=py38h06a4308_1
+  - anyio=3.5.0=py38h06a4308_0
   - argon2-cffi=20.1.0=py38h27cfd23_1
   - astor=0.8.1=pyh9f0ad1d_0
   - astunparse=1.6.3=pyhd8ed1ab_0
   - async-timeout=3.0.1=py_1000
   - async_generator=1.10=pyhd3eb1b0_0
   - attrs=20.3.0=pyhd3deb0d_0
-  - babel=2.9.1=pyhd3eb1b0_0
+  - autopep8=1.6.0=pyhd3eb1b0_1
+  - babel=2.11.0=py38h06a4308_0
   - backcall=0.2.0=pyhd3eb1b0_0
   - biopython=1.78=py38h7b6447c_0
   - blas=1.0=mkl
   - bleach=3.3.0=pyhd3eb1b0_0
   - blinker=1.4=py_1
-  - bokeh=2.3.0=py38h06a4308_0
+  - bokeh=2.4.3=py38h06a4308_0
   - brotlipy=0.7.0=py38h497a2fe_1001
   - c-ares=1.17.1=h7f98852_1
-  - ca-certificates=2021.5.25=h06a4308_1
+  - ca-certificates=2023.01.10=h06a4308_0
   - cachetools=4.2.1=pyhd8ed1ab_0
-  - certifi=2021.5.30=py38h06a4308_0
+  - certifi=2022.12.7=py38h06a4308_0
   - cffi=1.14.5=py38ha65f79e_0
   - chardet=4.0.0=py38h578d9bd_1
   - click=7.1.2=pyh9f0ad1d_0
@@ -38,7 +39,7 @@ dependencies:
   - cytoolz=0.11.0=py38h7b6447c_0
   - dask=2021.3.0=pyhd3eb1b0_0
   - dask-core=2021.3.0=pyhd3eb1b0_0
-  - datashader=0.12.1=pyhd3eb1b0_1
+  - datashader=0.13.0=py_0
   - datashape=0.5.4=py38h06a4308_1
   - dbus=1.13.18=hb2f20db_0
   - decorator=4.4.2=pyhd3eb1b0_0
@@ -47,7 +48,9 @@ dependencies:
   - distributed=2021.3.0=py38h06a4308_0
   - entrypoints=0.3=py38_0
   - expat=2.2.10=he6710b0_2
+  - filprofiler=2021.05.0=py38h2fa61bb_0
   - firefox=86.0=h9c3ff4c_0
+  - flit-core=3.6.0=pyhd3eb1b0_0
   - fontconfig=2.13.1=h6c09931_0
   - freetype=2.10.4=h5ab3b9f_0
   - fsspec=0.8.3=py_0
@@ -63,10 +66,12 @@ dependencies:
   - h5py=2.10.0=nompi_py38h7442b35_105
   - hdf5=1.10.6=nompi_h3c11f04_101
   - heapdict=1.0.1=py_0
-  - holoviews=1.14.2=pyhd3eb1b0_0
+  - holoviews=1.15.4=py_0
   - hopcroftkarp=1.2.4=py_0
+  - hvplot=0.8.1=py_0
   - icu=58.2=he6710b0_3
   - idna=2.10=pyh9f0ad1d_0
+  - imageio=2.9.0=pyhd3eb1b0_0
   - importlib-metadata=3.7.3=py38h578d9bd_0
   - importlib_metadata=3.7.3=hd3eb1b0_1
   - intel-openmp=2020.2=254
@@ -77,15 +82,14 @@ dependencies:
   - jinja2=2.11.3=pyhd3eb1b0_0
   - joblib=1.0.1=pyhd3eb1b0_0
   - jpeg=9b=h024ee3a_2
-  - json5=0.9.5=py_0
+  - json5=0.9.6=pyhd3eb1b0_0
   - jsonschema=3.2.0=py_2
-  - jupyter-packaging=0.7.12=pyhd3eb1b0_0
   - jupyter_client=6.1.7=py_0
   - jupyter_core=4.7.1=py38h06a4308_0
-  - jupyter_server=1.4.1=py38h06a4308_0
+  - jupyter_server=1.13.5=pyhd3eb1b0_0
   - jupyterlab=3.0.14=pyhd3eb1b0_1
   - jupyterlab_pygments=0.1.2=py_0
-  - jupyterlab_server=2.4.0=pyhd3eb1b0_0
+  - jupyterlab_server=2.10.3=pyhd3eb1b0_1
   - keras=2.4.3=py_0
   - keras-preprocessing=1.1.2=pyhd8ed1ab_0
   - kiwisolver=1.3.1=py38h2531618_0
@@ -120,33 +124,33 @@ dependencies:
   - msgpack-python=1.0.2=py38hff7bd54_1
   - multidict=5.1.0=py38h497a2fe_1
   - multipledispatch=0.6.0=py38_0
-  - nbclassic=0.2.6=pyhd3eb1b0_0
+  - nbclassic=0.3.5=pyhd3eb1b0_0
   - nbclient=0.5.3=pyhd3eb1b0_0
   - nbconvert=6.0.7=py38_0
   - nbformat=5.1.2=pyhd3eb1b0_1
   - ncurses=6.2=he6710b0_1
   - nest-asyncio=1.5.1=pyhd3eb1b0_0
+  - networkx=2.8.4=py38h06a4308_0
   - notebook=6.2.0=py38h06a4308_0
   - numba=0.53.0=py38ha9443f7_0
   - numpy=1.19.2=py38h54aff64_0
   - numpy-base=1.19.2=py38hfa32c7d_0
   - oauthlib=3.0.1=py_0
   - olefile=0.46=py_0
-  - openssl=1.1.1k=h27cfd23_0
+  - openssl=1.1.1s=h7f8727e_0
   - opt_einsum=3.3.0=py_0
   - packaging=20.9=pyhd3eb1b0_0
   - pandas=1.2.3=py38ha9443f7_0
   - pandoc=2.12=h06a4308_0
   - pandocfilters=1.4.3=py38h06a4308_1
-  - panel=0.11.1=py_0
-  - param=1.10.1=pyhd3eb1b0_0
+  - panel=0.14.3=py_0
+  - param=1.12.2=py_0
   - parso=0.8.1=pyhd3eb1b0_0
   - partd=1.1.0=py_0
   - pcre=8.44=he6710b0_0
   - persim=0.3.0=pyhd8ed1ab_0
   - pexpect=4.8.0=pyhd3eb1b0_3
   - pickleshare=0.7.5=pyhd3eb1b0_1003
-  - pillow=8.1.2=py38he98fc37_0
   - pip=21.0.1=py38h06a4308_0
   - prometheus_client=0.9.0=pyhd3eb1b0_0
   - prompt-toolkit=3.0.8=py_0
@@ -155,6 +159,7 @@ dependencies:
   - ptyprocess=0.7.0=pyhd3eb1b0_2
   - pyasn1=0.4.8=py_0
   - pyasn1-modules=0.2.7=py_0
+  - pycodestyle=2.10.0=py38h06a4308_0
   - pycparser=2.20=pyh9f0ad1d_2
   - pyct=0.4.8=py38_0
   - pygments=2.8.1=pyhd3eb1b0_0
@@ -163,6 +168,7 @@ dependencies:
   - pyopenssl=20.0.1=pyhd8ed1ab_0
   - pyparsing=2.4.7=pyhd3eb1b0_0
   - pyqt=5.9.2=py38h05f1152_4
+  - pyrr=0.10.3=py_0
   - pyrsistent=0.17.3=py38h7b6447c_0
   - pysocks=1.7.1=py38h578d9bd_3
   - python=3.8.8=hffdb5ce_0_cpython
@@ -170,6 +176,7 @@ dependencies:
   - python_abi=3.8=1_cp38
   - pytz=2021.1=pyhd3eb1b0_0
   - pyviz_comms=2.0.1=pyhd3eb1b0_0
+  - pywavelets=1.3.0=py38h7f8727e_0
   - pyyaml=5.4.1=py38h497a2fe_0
   - pyzmq=20.0.0=py38h2531618_1
   - qt=5.9.7=h5867ecd_1
@@ -178,11 +185,11 @@ dependencies:
   - requests-oauthlib=1.3.0=pyh9f0ad1d_0
   - ripser=0.6.0=py38hc10631b_1
   - rsa=4.7.2=pyh44b312d_0
+  - scikit-image=0.18.3=py38h51133e4_0
   - scikit-learn=0.24.1=py38ha9443f7_0
   - scipy=1.6.1=py38h91f5cce_0
   - selenium=3.141.0=py38h27cfd23_1000
   - send2trash=1.5.0=pyhd3eb1b0_1
-  - setuptools=52.0.0=py38h06a4308_0
   - sip=4.19.13=py38he6710b0_0
   - six=1.15.0=py38h06a4308_0
   - sniffio=1.2.0=py38h06a4308_1
@@ -199,17 +206,20 @@ dependencies:
   - terminado=0.9.3=py38h06a4308_0
   - testpath=0.4.4=pyhd3eb1b0_0
   - threadpoolctl=2.1.0=pyh5ca1d4c_0
+  - tifffile=2020.10.1=py38hdd07704_2
   - tk=8.6.10=hbc83047_0
+  - toml=0.10.2=pyhd3eb1b0_0
   - toolz=0.11.1=pyhd3eb1b0_0
   - tornado=6.1=py38h27cfd23_0
   - tqdm=4.59.0=pyhd3eb1b0_1
   - traitlets=5.0.5=pyhd3eb1b0_0
-  - typing-extensions=3.7.4.3=0
-  - typing_extensions=3.7.4.3=py_0
+  - typing-extensions=4.4.0=py38h06a4308_0
+  - typing_extensions=4.4.0=py38h06a4308_0
   - umap-learn=0.5.1=py38h578d9bd_0
   - urllib3=1.26.4=pyhd8ed1ab_0
   - wcwidth=0.2.5=py_0
   - webencodings=0.5.1=py38_1
+  - websocket-client=0.58.0=py38h06a4308_4
   - werkzeug=1.0.1=pyh9f0ad1d_0
   - wheel=0.36.2=pyhd3eb1b0_0
   - wrapt=1.12.1=py38h497a2fe_3
@@ -222,4 +232,22 @@ dependencies:
   - zipp=3.4.1=pyhd8ed1ab_0
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.4.5=h9ceee32_0
+  - pip:
+    - addict==2.4.0
+    - caerus==0.1.8
+    - deprecation==2.1.0
+    - findpeaks==2.4.3
+    - ipywidgets==8.0.2
+    - jupyter-packaging==0.12.3
+    - jupyterlab-widgets==3.0.3
+    - memory-profiler==0.60.0
+    - open3d==0.15.2
+    - opencv-python==4.6.0.66
+    - peakdetect==1.1
+    - pillow==9.2.0
+    - pyquaternion==0.9.9
+    - setuptools==65.3.0
+    - tomlkit==0.11.4
+    - wget==3.2
+    - widgetsnbextension==4.0.3
 prefix: /software/team301/user/cw21/conda/kmerviz
